
plugins {
    id 'uk.gov.hmcts.java' version '0.12.24' apply false
    id 'io.freefair.lombok' version '8.13.1' apply false
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: 'uk.gov.hmcts.java'
    apply plugin: 'io.freefair.lombok'

    repositories {
        mavenCentral()
        maven {
            url = uri('https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1')
        }
    }

    group = 'com.github.hmcts.rse-cft-lib'
    version = System.getenv('RELEASE_VERSION') ?: 'DEV-SNAPSHOT'


    java {
        withSourcesJar()
    }

    publishing {
        publications {
            mavenJava(MavenPublication) {
                from components.java
            }
        }
        repositories {
            maven {
                name = "AzureArtifacts"
                url = uri("https://pkgs.dev.azure.com/hmcts/Artifacts/_packaging/hmcts-lib/maven/v1")
                credentials {
                    username = System.getenv("AZURE_DEVOPS_ARTIFACT_USERNAME")
                    password = System.getenv("AZURE_DEVOPS_ARTIFACT_TOKEN")
                }
            }
        }
    }

    rootProject.tasks.publishToMavenLocal.dependsOn(project.tasks.publishToMavenLocal)
    rootProject.tasks.publishToAzureArtifacts.dependsOn(project.tasks.publishAllPublicationsToAzureArtifactsRepository)

    java {
        withJavadocJar()
        toolchain {
            languageVersion.set(JavaLanguageVersion.of(21))
        }
    }


   afterEvaluate {
       checkstyle {
           toolVersion = "8.36"
       }
   }
}
